@@ -3,7 +3,7 @@
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2022-08-06T00:00:00Z",
+      "timestamp": "2022-08-24T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
